--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Sidekick for SaaS",
-  "description": "Turn smart comments into warm leads on X and LinkedIn.",
+  "description": "For When You Really Just Need a Bridget. Turn smart comments into warm leads on X and LinkedIn.",
   "version": "0.1.0",
   "action": {
     "default_title": "Sidekick for SaaS",
